--- a/ProyectoDelGrupoDWS2/src/main/resources/application.properties
+++ b/ProyectoDelGrupoDWS2/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 logging.level.org.springframework.web=DEBUG
 logging.level.edu.ProyectoDelGrupoDWS2=DEBUG
 server.servlet.context-path=/ProyectoDelGrupoDWS2
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.jsp
 server.port=8080
