--- a/ProyectoDelGrupoDWS2/pom.xml
+++ b/ProyectoDelGrupoDWS2/pom.xml
@@ -41,6 +41,14 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
+		<!-- Dependencia del JSON OBJECT-->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20230618</version>
+		</dependency>
+
+
 		<!-- API de Servlets de Jakarta para manejar peticiones HTTP y trabajar
 		con Servlets -->
 		<dependency>
